# kate-copilot

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/ci/: Dockerfile
.github/workflows/: ci.yml
.pi/tasks/: tasks-019da531-f69c-7619-a69e-6f36570609cf.json
.serena/: project.yml
.serena/memories/design/kate-ai-inline-completion/: copilot-oauth-codex-provider-followup-fixes-endpoint-lock-and-auth-error.md  copilot-oauth-codex-provider-implementation-phase1.md  design-log-1.md  eval-harness-and-prompt-templates-implementation.md  eval-harness-containerization-and-run-results.md  eval-harness-followup-results-fim-v3-and-model-comparison.md  frameworks-level-virtual-lines-extension-concept.md  gentoo-live-ebuild.md  ghost-overlay-widget-main-path-implementation.md  implementation-phase1.md  implementation-phase2-mvp-skeleton.md  inline-note-ab-test-aligntop-vs-qtextlayout-eof-results.md  inline-note-multiline-followup-dynamic-rendering-and-eof-boundary.md  inline-note-multiline-main-path-implementation.md  inline-note-rendering-experiment-results.md  inline-note-single-note-newline-string-experiment.md  ktexteditor-virtual-block-provider-design-doc.md  license-files.md  ollama-remote-smoke-test.md  research-report-summary.md  (+5 more)
autotests/: CMakeLists.txt  CompletionSettingsTest.cpp  CompletionStrategyEngineTest.cpp  ContextFileFilterTest.cpp  ContextProviderRegistryTest.cpp  DiagnosticStoreTest.cpp  DiagnosticsAdapterTest.cpp  DiagnosticsContextProviderTest.cpp  EditorSessionIntegrationTest.cpp  GhostTextInlineNoteProviderRenderingTest.cpp  GhostTextInlineNoteProviderTest.cpp  GhostTextOverlayWidgetRenderingTest.cpp  InlineNoteRenderingABTest.cpp  InlineNoteRenderingExperimentTest.cpp  KateAiConfigPageTest.cpp  ProjectContextResolverTest.cpp  PromptAssemblerTest.cpp  PromptTemplateTest.cpp  RecentEditsContextProviderTest.cpp  RecentEditsTrackerTest.cpp  RelatedFilesContextProviderTest.cpp  RelatedFilesResolverTest.cpp  SSEParserTest.cpp  SuggestionAnchorTrackerTest.cpp  SuggestionPostProcessorTest.cpp
docs/plans/: 2026-04-19-inline-note-rendering-experiment-design.md  2026-04-19-kate-ai-inline-completion-copilot-oauth-codex-provider-design.md  2026-04-19-kate-ai-inline-completion-design.md  2026-04-19-kate-ai-inline-completion-eval-harness.md  2026-04-20-inline-note-multiline-implementation-plan.md  2026-04-20-kate-ai-ghost-overlay-renderer-design.md  2026-04-20-kate-ai-inline-note-ab-eof-baseline-design.md  2026-04-20-kate-ai-inline-note-ab-eof-baseline-implementation-plan.md  2026-04-20-kate-ai-inline-note-multiline-design.md  2026-04-20-kate-ai-overlay-stabilization-and-release-prep-design.md  2026-04-20-kate-ai-overlay-stabilization-and-release-prep-implementation-plan.md  2026-04-20-kate-ai-partial-accept-design.md  2026-04-20-kate-ai-single-note-newline-inline-note-design.md  2026-04-20-ktexteditor-virtual-block-provider-design.md  2026-04-20-ktexteditor-virtual-block-provider-phase1-implementation-plan.md  2026-04-25-kate-ai-release-actions-ci-copilot-proposal-design.md  2026-04-25-kate-ai-single-line-inline-note-routing-design.md  2026-05-16-kate-ai-context-aware-completion-phase1-design.md  2026-05-16-kate-ai-diagnostics-context-provider-design.md  2026-05-16-kate-ai-haskell-related-files-context-provider-design.md  2026-05-16-kate-ai-phase2-context-hardening-design.md  2026-05-16-kate-ai-phase2h2-context-quality-hardening-design.md  2026-05-16-kate-ai-phase3a-completion-strategy-engine-design.md  2026-05-16-kate-ai-recent-edits-context-provider-design.md  2026-05-16-kate-ai-related-files-context-provider-and-settings-ui-design.md
docs/proposals/: 2026-04-25-ktexteditor-virtual-block-provider.md
docs/releases/: v0.1.0.md
src/: CMakeLists.txt
src/auth/: CopilotAuthManager.cpp  CopilotAuthManager.h
src/context/: ContextFileFilter.cpp  ContextFileFilter.h  ContextItem.h  ContextProvider.h  ContextProviderRegistry.cpp  ContextProviderRegistry.h  CurrentFileContextProvider.cpp  CurrentFileContextProvider.h  DiagnosticItem.h  DiagnosticStore.cpp  DiagnosticStore.h  DiagnosticsAdapter.cpp  DiagnosticsAdapter.h  DiagnosticsContextProvider.cpp  DiagnosticsContextProvider.h  OpenTabsContextProvider.cpp  OpenTabsContextProvider.h  ProjectContextResolver.cpp  ProjectContextResolver.h  ProjectTraitsContextProvider.cpp  ProjectTraitsContextProvider.h  RecentEdit.h  RecentEditsContextProvider.cpp  RecentEditsContextProvider.h  RecentEditsTracker.cpp  RecentEditsTracker.h  RelatedFilesContextProvider.cpp  RelatedFilesContextProvider.h  RelatedFilesResolver.cpp  RelatedFilesResolver.h
src/network/: AbstractAIProvider.h  CopilotCodexProvider.cpp  CopilotCodexProvider.h  OpenAICompatibleProvider.cpp  OpenAICompatibleProvider.h  SSEParser.cpp  SSEParser.h
src/plugin/: KateAiInlineCompletionPlugin.cpp  KateAiInlineCompletionPlugin.h  KateAiInlineCompletionPluginView.cpp  KateAiInlineCompletionPluginView.h  kateaiinlinecompletion.json
src/prompt/: CopilotCodexPromptBuilder.cpp  CopilotCodexPromptBuilder.h  PromptAssembler.cpp  PromptAssembler.h  PromptTemplate.cpp  PromptTemplate.h
src/render/: GhostTextInlineNoteProvider.cpp  GhostTextInlineNoteProvider.h  GhostTextOverlayWidget.cpp  GhostTextOverlayWidget.h  GhostTextPushDownOverlay.cpp  GhostTextPushDownOverlay.h
src/session/: CompletionStrategy.cpp  CompletionStrategy.h  CompletionStrategyEngine.cpp  CompletionStrategyEngine.h  EditorSession.cpp  EditorSession.h  GhostTextState.h  SuggestionAnchorTracker.cpp  SuggestionAnchorTracker.h  SuggestionPostProcessor.cpp  SuggestionPostProcessor.h
src/settings/: CompletionSettings.cpp  CompletionSettings.h  KWalletSecretStore.cpp  KWalletSecretStore.h  KateAiConfigPage.cpp  KateAiConfigPage.h
tools/: CMakeLists.txt  ollama_smoke_test.cpp
tools/eval/: README.md  kate_ai_eval.py  requirements.txt
tools/eval/docker/humaneval-infilling/: Dockerfile
tools/eval/lib/: __init__.py  docker_execeval.py  docker_humaneval_infilling.py  git_deps.py  humaneval_infilling.py  jsonl.py  ollama_openai_client.py  path_utils.py  prompt_templates.py  safim.py
(+2 files in other folders)
